<resources>
    <string name="app_name">SportsLeague</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cari_pertandingan">Cari Pertandingan</string>
    <string name="score_separator">:</string>
    <string name="logo_home">logo_home</string>
    <string name="logo_away">logo_away</string>
    <string name="red_card">Red Card</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="goal">Goal</string>
    <string name="subtitution">Subtitution</string>
    <string name="forward">Forward</string>
    <string name="mid">Mid</string>
    <string name="gk">GK</string>
    <string name="defense">Defense</string>
</resources>
